# comfyui-lumi-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  __init__.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml  release.yml
docs/: LLMImagenProcessor.md  LLMPromptProcessor.md
js/: lumi-pack.js  lumi-wildcard.js
nodes/: __init__.py  llm_imagen_processor.py  llm_inference.py  llm_models.py  llm_prompt_processor.py  noise_to_seed.py  openrouter_provider.py  save_image.py  seed.py  show_text.py  shuffle_prompt.py  text_input.py  wildcard_encode.py  wildcard_processor.py  wildcards.py  wrap_text.py
wildcards/: configure_wildcard_location_instead_of_putting_them_here
