[project]
name = "comfyui-lumi-tools"
version = "0.1.0"
description = "A ComfyUI custom node pack by Lumi."
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dynamicprompts"]

[project.urls]
Repository = "https://github.com/illuminatianon/comfyui-lumi-tools

[tool.comfy]
PublisherId = "illuminatianon"
DisplayName = "Lumi Tools"
Icon = ""
