[project]
name = "comfyui-lumi-tools"
version = "0.1.0"
description = "A ComfyUI custom node pack by Lumi."
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dynamicprompts"]

[project.urls]
Repository = "https://github.com/anthropics/comfyui-lumi-tools"

[tool.setuptools]
packages = []

[tool.comfy]
PublisherId = "illuminatianon-333"
DisplayName = "Lumi Tools"
Icon = ""
